kubernetes/updateConfigmapNamespace/cm-to-env-all.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-to-env-all
spec:
  containers:
    - name: my-container
      image: docker.io/busybox
      args: ["tail", "-f", "/dev/null"]
      envFrom: ## 컨피그맵에 정의된 모든 키-값 쌍을 가져와서 환경변수로 설정
        - configMapRef:
            name: log-level-configmap ## LOG_LEVEL=DEBUG
        - configMapRef:
            name: config-k8s ## k8s=kubernetes, container=docker
