kubernetes/updateConfigmapNamespace/cm-to-volume-selective.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-to-volume-all
spec:
  containers:
    - name: my-container
      image: docker.io/busybox
      args: ["tail", "-f", "/dev/null"]
      volumeMounts:
        - name: configmap-volume ## (1)에서 정의한 컨피그맵 볼륨의 이름
          mountPath: /etc/config ## 컨피그맵 데이터가 위치할 경로
  volumes:
    - name: configmap-volume ## (1) 컨피그맵 볼륨을 정의
      configMap:
        name: config-k8s ## 키-값 쌍을 가져올 컨피그맵 이름
