kubernetes/updateConfigmapNamespace/hostname-deploy-svc-ns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-deploy-ns
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: my-webserver
      labels:
        app: webserver
    spec:
      containers:
        - name: my-webserver
          image: docker.io/alicek106/rr-test:echo-hostname
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-svc-clusterip-ns
  namespace: production
spec:
  type: ClusterIP
  ports:
    - name: web-port
      port: 8080
      targetPort: 80
  selector:
    app: webserver
