kubernetes/updateConfigmapNamespace/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "80"
spec:
  ingressClassName: nginx
  rules:
    - host: www.canary.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: canary-service
                port:
                  number: 80
